# meowcod

./: CMakeLists.txt  README.md
LongNumber/: CMakeLists.txt
LongNumber/include/: longnumber.hpp
LongNumber/src/: longnumber.cpp
LongNumber/test/: meowtest.cpp  test1.cpp
MeowPi/: CMakeLists.txt
MeowPi/src/: meow.cpp
piProj/: CMakeLists.txt
piProj/src/: meow.cpp
